[project]
name = "bollard"
version = "0.1.0"
description = "A Pythonic client for the Docker/Podman Engine API."
readme = "docs/README.md"
requires-python = ">=3.14"
dependencies = []

[project.urls]
Repository = "https://github.com/Julynx/bollard"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pylint>=4.0.4",
    "pyright>=1.1.408",
    "yina>=0.1.10",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bollard"]

[tool.mypy]
packages = ["bollard"]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pylint]
max-line-length = 88

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
